--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "variable-sdk",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "tsc": "tsc",
     "build": "rimraf dist/ && yarn tsc -b"
