--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "es2016",
+    "target": "ES2021",
     "module": "commonjs",
     "allowJs": true,
     "esModuleInterop": true,
@@ -8,7 +8,7 @@
     "rootDir": "./",
     "strict": true,
     "preserveSymlinks": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
   },
   "exclude": [
     "node_modules",
