--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "target": "ES2021",
-    "module": "commonjs",
+    "target": "ES2022",
+    "module": "Commonjs",
     "allowJs": true,
     "esModuleInterop": true,
     "outDir": "dist",
@@ -10,10 +10,10 @@
     "preserveSymlinks": true,
     "resolveJsonModule": true,
   },
+  "include":["src"],
   "exclude": [
     "node_modules",
     "scripts",
-    "test",
-    "dist",
+    "test"
   ]
 }
