--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "tsup": "tsup",
-    "build": "rimraf dist/ && yarn tsup"
+    "build": "rimraf dist/ && yarn tsup",
+    "test": "jest"
   },
   "repository": "git@github.com:variable-exchange/variable-sdk.git",
   "author": "Variable",
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.5",
-    "typescript": "^5.3.3",
-    "tsup": "^8.0.1"
+    "jest": "^29.7.0",
+    "tsup": "^8.0.1",
+    "typescript": "^5.3.3"
   }
 }
