--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Variable",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
     "jest": "^29.7.0",
+    "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
   }
