--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,11 +4,15 @@
     "module": "Commonjs",
     "allowJs": true,
     "esModuleInterop": true,
-    "outDir": "dist",
+    "outDir": "./dist",
+    "moduleResolution": "node",
     "rootDir": "./",
     "strict": true,
     "preserveSymlinks": true,
     "resolveJsonModule": true,
+    "isolatedModules": true,
+    "jsx": "react",
+    "types": ["jest"]
   },
   "include":["src"],
   "exclude": [
