--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,7 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
-    "types": ["jest"]
+    "types": ["jest","node"]
   },
   "include":["src"],
   "exclude": [
