--- a/package.json
+++ b/package.json
@@ -19,5 +19,8 @@
     "ts-jest": "^29.1.1",
     "tsup": "^8.0.1",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "@ethersproject/abi": "^5.7.0"
   }
 }
